--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -9,6 +9,11 @@
 </div>
 <br/>
 <div>
+    <a href="http://localhost:8080/login/github">
+        <button>Login con github</button>
+    </a>
+</div>
+<div>
     <a href="http://localhost:8080/">
         <button>Registrarse</button>
     </a>
