--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -16,3 +16,8 @@
         <button>Iniciar sesion</button>
     </a>
 </div>
+<div>
+    <a href="http://localhost:8080/login/github">
+        <button>Registrarse con github</button>
+    </a>
+</div>
