--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -103,6 +103,13 @@
       cursor: pointer;
     }
 
+    .headerDetails{
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-around;
+    }
+
     </style>
   </head>
   <body>
