--- a/src/views/productDetails.handlebars
+++ b/src/views/productDetails.handlebars
@@ -9,6 +9,11 @@
         <p>Code: {{product.code}}</p>
         <p>Description: {{product.description}}</p>
         <button class="cart-button" onclick="addToCart('{{product._id}}')">Agregar al carrito</button>
+        <div>
+            <a href="http://localhost:8080/api/products">
+                <button>Volver a la lista de productos</button>
+            </a>
+        </div>
     </div>
 </div>
 
