--- a/src/views/cartDetails.handlebars
+++ b/src/views/cartDetails.handlebars
@@ -9,3 +9,5 @@
     <p style="color: #666;">Cantidad: <span style="color: #000; font-weight: bold;">{{this.quantity}}</span></p>
     {{/each}}
 </div>
+
+{{!-- TENGO QUE HACERLE LA FUNCIONALIDAD PARA PODER AGREGAR MAS PRODUCTOS --}}
