--- a/src/views/productList.handlebars
+++ b/src/views/productList.handlebars
@@ -27,3 +27,4 @@
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/productList.js"></script>
+<script src="/js/productDetails.js" ></script>
