Tercera pre entrega finalizada

--- a/src/views/cartDetails.handlebars
+++ b/src/views/cartDetails.handlebars
@@ -5,9 +5,28 @@
 
     <h2 style="color: #333; font-size: 20px;">Productos:</h2>
     {{#each cart.products}}
-    <p style="color: #666;">Producto: <span style="color: #000; font-weight: bold;">{{this.product}}</span></p>
-    <p style="color: #666;">Cantidad: <span style="color: #000; font-weight: bold;">{{this.quantity}}</span></p>
-    {{/each}}
-</div>
+    <div id="divProductsCart">
+        <div>
+            <p style="color: #666;">Producto: <span style="color: #000; font-weight: bold;">{{this.product}}</span></p>
+            <p style="color: #666;">Cantidad: <span style="color: #000; font-weight: bold;">{{this.quantity}}</span></p>
+        </div>
+        
+        <div id="bottonProductsCart">
+            <button onclick="borrarProduct('{{../cart._id}}', '{{this._id}}', '{{this.quantity}}')" id="botonEliminarProducts" class="noselect"><span class="text">Delete</span><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"></path></svg></span></button>
+        </div>
+        
+    </div>
+    
 
-{{!-- TENGO QUE HACERLE LA FUNCIONALIDAD PARA PODER AGREGAR MAS PRODUCTOS --}}
+    {{/each}}
+    <button onclick="borrarAllProducts('{{cart._id}}')">Delete all products</button>
+    <div>
+        <button onclick="terminarCompra('{{cart._id}}')">Terminar compra</button>
+    </div>
+
+    <div>
+        <button onclick="seguirComprando()">Seguir comprando</button>
+    </div>
+</div>
+<script src="/socket.io/socket.io.js"></script>
+<script src="/js/cartDetails.js" ></script>
