--- a/src/views/current.handlebars
+++ b/src/views/current.handlebars
@@ -5,9 +5,9 @@
         <h3>Sus datos son:</h3>
         <ul>
             <li>Email: {{user.email}}</li>
-            <li>Password: {{user.password}}</li>
             <li>Age: {{user.age}}</li>
             <li>Lastname: {{user.lastname}}</li>
+            <li>Role: {{user.role}}</li>
         </ul>
     </div>
     <div>
@@ -15,4 +15,11 @@
             <button>Cerrar sesion</button>
         </a>
     </div>
+    <div>
+        <a href="http://localhost:8080/api/products">
+            <button>Volver a ver productos</button>
+        </a>
+    </div>
+
+
 </div>
