--- a/src/views/productDetails.handlebars
+++ b/src/views/productDetails.handlebars
@@ -8,7 +8,7 @@
         <p>Stock: {{product.stock}}</p>
         <p>Code: {{product.code}}</p>
         <p>Description: {{product.description}}</p>
-        <button class="cart-button" onclick="addToCart('{{product._id}}')">Agregar al carrito</button>
+        <button class="cart-button" onclick="addToCart('{{product._id}}', '{{product.title}}', '{{user._id}}')">Agregar al carrito</button>
         <div>
             <a href="http://localhost:8080/api/products">
                 <button>Volver a la lista de productos</button>
