--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -4,11 +4,11 @@
             <span class="title">Sign up</span>
             <span class="subtitle">Create a free account with your email.</span>
             <div class="form-container">
-                <input type="text" class="input" name="firstname" placeholder="firstname">
-                <input type="text" class="input" name="lastname" placeholder="lastname">
-                <input type="number" class="input" name="age" placeholder="Edad"/>
-                <input type="email" class="input" name="email" placeholder="Email">
-                <input type="password" class="input" name="password" placeholder="Password">
+                <input type="text" class="input" name="firstname" placeholder="firstname" required>
+                <input type="text" class="input" name="lastname" placeholder="lastname" required>
+                <input type="number" class="input" name="age" placeholder="Edad" required/>
+                <input type="email" class="input" name="email" placeholder="Email" required>
+                <input type="password" class="input" name="password" placeholder="Password" required>
             </div>
             <button type="submit">Sign up</button>
         </form>
