--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,7 +1,7 @@
 <div class="container p-4">
   <div class="row justify-content-center align-items-center mt-4">
     <div class="col-md-10 col-lg-8">
-      <div class="card">
+      <div class="cardRealTimeProducts">
         <div class="card-body">
           <h1>Lista de Productos en tiempo real</h1>
           <ul id="product-list"></ul>
