--- a/src/views/productList.handlebars
+++ b/src/views/productList.handlebars
@@ -9,6 +9,12 @@
                 <button>Ir a mi perfil</button>
             </a>
         </div>
+        <button onclick="bePremium('{{user._id}}')" class="buttonPremium">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 36 24">
+                <path d="m18 0 8 12 10-8-4 20H4L0 4l10 8 8-12z"></path>
+            </svg>
+            Unlock Premium
+        </button>
     </div>
     
     <ul>
