--- a/src/views/productDetails.handlebars
+++ b/src/views/productDetails.handlebars
@@ -8,7 +8,9 @@
         <p>Stock: {{product.stock}}</p>
         <p>Code: {{product.code}}</p>
         <p>Description: {{product.description}}</p>
-        <button class="cart-button" onclick="addToCart('{{product._id}}', '{{product.title}}', '{{user._id}}')">Agregar al carrito</button>
+        <p>Owner: {{product.owner}}</p>
+        <button class="cart-button" onclick="addToCart('{{product._id}}', '{{product.title}}', '{{user._id}}', '{{product.owner}}', '{{user.email}}')">Agregar al carrito</button>
+        <h4 id="cannotAdd" style="display: none;">Cannot add your own product</h4>
         <div>
             <a href="http://localhost:8080/api/products">
                 <button>Volver a la lista de productos</button>
