--- a/src/views/recovery.handlebars
+++ b/src/views/recovery.handlebars
@@ -1,10 +1,48 @@
 <h1>Recuperar contraseña</h1>
 
 <div>
-    <form action="http://localhost:3000/recovery" method="post">
+    <form id="recoveryForm" action="/recovery" method="POST">
         <input type="email" name="email" placeholder="Email"/>
-        <input type="password" name="password" placeholder="Password"/>
         <button type="submit">Recuperar contraseña</button>
     </form>
 </div>
 <br/>
+
+<div id="message" style="display: none;">
+  Se le ha enviado un mail, donde podrá recuperar su contraseña.
+</div>
+
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const recoveryForm = document.getElementById('recoveryForm');
+    const message = document.getElementById('message');
+
+    recoveryForm.addEventListener('submit', async (event) => {
+      event.preventDefault();
+      console.log('Formulario enviado');
+
+      const formData = new FormData(recoveryForm);
+
+      try {
+        const response = await fetch('/recovery', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/x-www-form-urlencoded'
+          },
+          body: new URLSearchParams(formData)
+        });
+
+        if (response.ok) {
+          recoveryForm.style.display = 'none';
+          message.style.display = 'block';
+          message.style.color = 'white';
+        } else {
+          console.error('Error en la solicitud de recuperación de contraseña');
+        }
+      } catch (error) {
+        console.error('Error al enviar la solicitud de recuperación de contraseña:', error);
+      }
+    });
+  });
+</script>
+
