--- a/src/views/productList.handlebars
+++ b/src/views/productList.handlebars
@@ -27,6 +27,10 @@
             <button class="details-button" onclick="showDetails('{{_id}}')">Ver detalles</button>
         </li>
         {{/each}}
+        <a href="/api/products/createProduct">
+            <button>Create product</button>
+        </a>
+            
     </ul>
     
 </div>
