--- a/src/views/password-reset-success.handlebars
+++ b/src/views/password-reset-success.handlebars
@@ -2,4 +2,4 @@
 <p style="color: aliceblue;">Tu contraseña ha sido cambiada exitosamente.</p>
 <p style="color: aliceblue;">¡Ahora puedes iniciar sesión con tu nueva contraseña!</p>
 
-<a href="/login"><button>Iniciar Sesion</button></a>
+<a href="/api/users/login"><button>Iniciar Sesion</button></a>
