--- a/src/views/productList.handlebars
+++ b/src/views/productList.handlebars
@@ -5,8 +5,24 @@
         {{/if}}
         <h1>Lista de productos</h1>
         <div>
-            <a href="http://localhost:8080/current">
+            <a href="/api/users/current">
                 <button>Ir a mi perfil</button>
+            </a>
+        </div>
+        <div>
+            <a href="/api/products/createProduct">
+                <button>Create product</button>
+            </a>
+        </div>
+        <div>
+            <a href="/carts/{{user.cart}}">
+                <button class="buttonCart">
+                    <svg viewBox="0 0 16 16" class="bi bi-cart-check" height="24" width="24" xmlns="http://www.w3.org/2000/svg" fill="#fff">
+                    <path d="M11.354 6.354a.5.5 0 0 0-.708-.708L8 8.293 6.854 7.146a.5.5 0 1 0-.708.708l1.5 1.5a.5.5 0 0 0 .708 0l3-3z"></path>
+                    <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"></path>
+                    </svg>
+                    <p class="textBuy">Buy Now</p>
+                </button>
             </a>
         </div>
         <button onclick="bePremium('{{user._id}}')" class="buttonPremium">
@@ -27,9 +43,6 @@
             <button class="details-button" onclick="showDetails('{{_id}}')">Ver detalles</button>
         </li>
         {{/each}}
-        <a href="/api/products/createProduct">
-            <button>Create product</button>
-        </a>
             
     </ul>
     
