--- a/src/views/recovery-password.handlebars
+++ b/src/views/recovery-password.handlebars
@@ -19,7 +19,7 @@
       const formData = new FormData(resetForm);
 
       try {
-        const response = await fetch('/recovery-password', {
+        const response = await fetch('/api/users/recovery-password', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/x-www-form-urlencoded'
@@ -28,7 +28,7 @@
         });
 
         if (response.ok) {
-          window.location.href = '/password-reset-success';
+          window.location.href = '/api/users/password-reset-success';
         } else {
           const errorMessage = await response.text();
           console.error(errorMessage);
