--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -1,6 +1,6 @@
 <div class="divCentrarForm">
     <div class="form-box">
-        <form class="form" action="http://localhost:8080/register" method="post">
+        <form class="form" action="/api/users/register" method="post">
             <span class="title">Sign up</span>
             <span class="subtitle">Create a free account with your email.</span>
             <div class="form-container">
@@ -13,8 +13,8 @@
             <button type="submit">Sign up</button>
         </form>
         <div class="form-section">
-            <p>Register with GitHub? <a href="login/github">Register</a> </p>
-            <p>Have an account? <a href="login">Log in</a> </p>
+            <p>Register with GitHub? <a href="/api/users/login/github">Register</a> </p>
+            <p>Have an account? <a href="/api/users/login">Log in</a> </p>
         </div>
     </div>
 </div>
