--- a/src/views/tickets.handlebars
+++ b/src/views/tickets.handlebars
@@ -17,4 +17,12 @@
     <div>
         <h2 style="color: white;">Verifique su email que le enviamos los mismos datos asi los guarda!</h2>
     </div>
+    <a href="/api/products">
+       <button id="buttonBox">
+            <span class="box">
+                Return Home!
+            </span>
+        </button> 
+    </a>
+        
 </div>
