--- a/src/views/current.handlebars
+++ b/src/views/current.handlebars
@@ -11,12 +11,12 @@
         </ul>
     </div>
     <div>
-        <a href="http://localhost:8080/logout">
+        <a href="/api/users/logout">
             <button>Cerrar sesion</button>
         </a>
     </div>
     <div>
-        <a href="http://localhost:8080/api/products">
+        <a href="/api/products">
             <button>Volver a ver productos</button>
         </a>
     </div>
