--- a/src/views/productDetails.handlebars
+++ b/src/views/productDetails.handlebars
@@ -12,7 +12,7 @@
         <button class="cart-button" onclick="addToCart('{{product._id}}', '{{product.title}}', '{{user._id}}', '{{product.owner}}', '{{user.email}}')">Agregar al carrito</button>
         <h4 id="cannotAdd" style="display: none;">Cannot add your own product</h4>
         <div>
-            <a href="http://localhost:8080/api/products">
+            <a href="/api/products">
                 <button>Volver a la lista de productos</button>
             </a>
         </div>
