Proyecto final finalizado

--- a/src/views/bePremium.handlebars
+++ b/src/views/bePremium.handlebars
@@ -5,7 +5,8 @@
             Return Home!
         </span>
     </button>
-    <h3 id="user-role"  style="display: none;"> {{user.role}}</h3>
+    <h2 id="user-id" style="display: none;" >{{user._id}}</h2>
+    <h3 id="user-role"  style="display: none;">{{user.role}}</h3>
     <div class="plan">
         <div class="inner">
             <span class="pricing">
