--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -954,6 +954,11 @@
           fill: #181717;
 
         }
+        .pagination{
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+        }
 
     </style>
   </head>
