--- a/src/views/cartDetails.handlebars
+++ b/src/views/cartDetails.handlebars
@@ -16,11 +16,10 @@
                 <svg viewBox="0 0 448 512" class="svgIcon"><path d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"></path></svg>
             </button>
         </div>
-        
-    </div>
-    
 
+    </div>
     {{/each}}
+    <h2 style="color: #333; font-size: 20px;" id="totalPrice">Total price: {{cart.totalPrice}}$</h2>
     <div id="divBotonesCart">
         <div style="padding: 15px;">
             <button onclick="borrarAllProducts('{{cart._id}}')" id="botonEliminarProducts" class="noselect"><span class="text">Clear cart</span><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"></path></svg></span></button>
@@ -28,7 +27,7 @@
         
 
         <div style="padding: 15px;">
-            <button onclick="terminarCompra('{{cart._id}}')">Terminar compra</button>
+            <button onclick="terminarCompra('{{cart._id}}', '{{cart.totalPrice}}')">Terminar compra</button>
         </div>
 
         <div style="padding: 15px;">
