--- a/src/views/createProduct.handlebars
+++ b/src/views/createProduct.handlebars
@@ -21,9 +21,9 @@
             <option value="true">Activo</option>
             <option value="false">Inactivo</option>
         </select><br>
-        
-        <label for="thumbnail">Imagen (URL):</label>
-        <input type="text" id="thumbnail" name="thumbnail"><br>
+
+        <label for="thumbnail">Imagen:</label>
+        <input type="file" id="thumbnail" name="thumbnail" accept="image/*"><br>
         
         <label for="category">Categoría:</label>
         <input type="text" id="category" name="category" required><br>
